# road-law-qa

./: .gitignore  netlify.toml  package-lock.json  pyproject.toml
backend/scrape_api/: cli.py  crawler.py  html_parser.py  ingest.py  pdf_extractor.py  sanitize_json_file.py
backend/scrape_api/output/: 00000G009EF7LV5SFQH1ADVA4KVOABPV.json  00000G1HR2293Y86G5Z3SFUBHCWGFGBE.json  00000G3H0G7ET5C226Q2AZYGEUDZ6BJJ.json  00000G3RY18AFIHNNFQ3EA55SG8E7NZ1.json  0c62daec-c3c0-45a7-a9a4-399c4c53645e.json  115309.json  117862.json  117905.json  117966.json  120775.json  121018.json  121019.json  121863.json  130255.json  130263.json  131162.json  131195.json  134400.json  135412.json  135413.json  138315.json  142722.json  145571.json  145572.json  15060.json  159877.json  168566.json  168633.json  169825.json  175371.json  175455.json  178038.json  178106.json  182710.json  182769.json  187779.json  191361.json  193460.json  193640.json  19734.json  (+180 more)
backend/server/netlify/functions/: api.py
backend/server/netlify/utils/: auth.py  openai_client.py  pinecone.py  settings.py  summarizer.py
client/: package-lock.json  package.json
client/src/: App.tsx  main.tsx
client/src/assets/styles/: global.css
client/src/pages/ChatArea/: ChatArea.tsx
client/src/pages/Conversations/: ConversationsList.tsx
client/src/pages/Dashboard/: Dashboard.module.css  Dashboard.tsx
client/src/pages/Home/: Home.module.css  Home.tsx
client/src/router/: index.tsx
client/src/services/: api.ts  authService.ts  chatService.ts  ingestService.ts
client/src/store/: AuthContext.tsx  index.tsx
(+16 files in other folders)
